--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div id="right_leg"></div>
             </div>
         </div>
-        <div class="input-container"><input type="text" id="input">
+        <div class="input-container"><input type="text" id="input" autocomplete="off">
         <button" id="submit">TRY</button></div>
     </main>
     <script src="/script.js"></script>
