--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>HANGMAN</title>
 </head>
@@ -29,6 +29,6 @@
         <div class="input-container"><input type="text" id="input" autocomplete="off">
         <button" id="submit">TRY</button></div>
     </main>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
